# routes/api.php
@@ -21,10 +21,18 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::post('teachers', [TeacherController::class, 'store'])->name('teachers.store');
+Route::get('courses', [CourseController::class, 'index'])->name('courses.index'); // 1. 取得課程列表 API
 
-Route::get('courses', [CourseController::class, 'index'])->name('courses.index');
-Route::post('courses', [CourseController::class, 'store'])->name('courses.store');
+Route::get('teachers', [TeacherController::class, 'index'])->name('teachers.index'); // 2. 授課講師 API
 
-Route::post('register', [AuthController::class, 'register'])->name('register');
-Route::post('login', [AuthController::class, 'login'])->name('login');
+Route::get('teachers/{user}/courses', [TeacherController::class, 'courses'])->name('teachers.courses'); // 3. 授課課程 API
+
+Route::post('teachers', [TeacherController::class, 'store'])->name('teachers.store'); // 4. 建立新講師 API
+
+Route::post('courses', [CourseController::class, 'store'])->name('courses.store'); // 5. 建立新課程 API
+
+Route::put('courses/{course}', [CourseController::class, 'update'])->name('courses.update'); // 6. 更新課程 API
+
+Route::delete('courses/{course}', [CourseController::class, 'destroy'])->name('courses.destroy'); // 7. 刪除課程 API
+
+require __DIR__ . '/auth.php';
